--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -128,7 +128,7 @@
         <div class="bot-status">⚡ Bot is Live ⚡</div>
 
         <div class="actions">
-            <a href="https://t.me/team_spy_pro" class="btn">Join Us</a>
+            <a href="https://t.me/+noGSZz0UEFc2ODg1" class="btn">Join Us</a>
             <a href="https://github.com/Codedevil24" class="btn">GitHub</a>
         </div>
     </div>
